--- a/index.html
+++ b/index.html
@@ -21,31 +21,40 @@
             </div>
         </nav>
 
-        <main class="hero-section">
-            <h1>Intelligence is Social.</h1>
-            <p style="font-size: 1.2rem; max-width: 600px; margin: 0 auto 2rem auto;">
-                A room-based psychological strategy game for friends. <br>
-                Test your reasoning, adaptability, and social intelligence.
+        <main class="hero-section" style="padding: 6rem 0; animation: slideUp 0.8s ease-out;">
+            <div style="margin-bottom: 2rem;">
+                <span class="tier-badge tier-legend">Season 1: Awakening</span>
+            </div>
+
+            <h1 style="font-size: 4rem; line-height: 1; text-shadow: 0 0 20px var(--accent-glow);">
+                TEST YOUR<br>
+                <span style="color: var(--accent-color);">INTELLIGENCE</span>
+            </h1>
+
+            <p style="font-size: 1.2rem; max-width: 600px; margin: 2rem auto; color: var(--text-secondary);">
+                Compete in real-time psychological strategy games. <br>
+                Outsmart your friends. Climb the Ranks. Become a Legend.
             </p>
-            <div class="cta-group">
-                <a href="login.html" class="btn btn-primary">Login to Play</a>
-                <button id="home-guest-btn" class="btn btn-secondary">Play as Guest</button>
+
+            <div class="cta-group" style="display: flex; gap: 1rem; justify-content: center; margin-top: 2rem;">
+                <a href="login.html" class="btn btn-primary" style="min-width: 200px;">ENTER ARENA</a>
+                <button id="home-guest-btn" class="btn btn-secondary">Quick Play</button>
             </div>
         </main>
 
         <section id="about"
-            style="margin-top: 4rem; display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 2rem;">
-            <div class="card">
-                <h3>Real Scenarios</h3>
-                <p>No trivia. Just difficult decisions that reveal who you really are.</p>
+            style="margin-top: 4rem; display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 2rem;">
+            <div class="card" style="border-top: 3px solid var(--tier-bronze);">
+                <h3 style="color: var(--tier-bronze);">Hard Decisions</h3>
+                <p>No trivia. Brutal scenarios that reveal your true character.</p>
             </div>
-            <div class="card">
-                <h3>Live Gameplay</h3>
-                <p>Join a room with friends or classmates. Compete in real-time.</p>
+            <div class="card" style="border-top: 3px solid var(--tier-gold);">
+                <h3 style="color: var(--tier-gold);">Live Multiplayer</h3>
+                <p>Sync with friends. Answer together. Judge their choices immediately.</p>
             </div>
-            <div class="card">
-                <h3>Earn Badges</h3>
-                <p>Track your stats across 4 categories and unlock prestige.</p>
+            <div class="card" style="border-top: 3px solid var(--tier-champion);">
+                <h3 style="color: var(--tier-champion);">Global Rank</h3>
+                <p>Earn XP across 5 Intelligence Pillars. Reach the Top 1%.</p>
             </div>
         </section>
     </div>
